doc: update api endpoints documentation
